--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   broker:
     image: eclipse-mosquitto:1.6.9
+    
     volumes: 
       - broker-data:/mosquitto/data
       - broker-logs:/mosquitto/log
@@ -10,8 +11,13 @@ services:
       cluster_net:
         ipv4_address: "172.19.1.2"
 
-  clientA:
+  client-a:
     image: eclipse-mosquitto:1.6.9
+    entrypoint: /bin/ash -c
+    command:
+      #- mosquitto_sub -t streetlight -h 172.19.1.2
+      - nohup mosquitto_pub -h 172.19.1.2 -t streetlight -m "red" --repeat 500 --repeat-delay 20s & mosquitto_pub -h 172.19.1.2 -t streetlight -m "green" --repeat 500 --repeat-delay 30s & mosquitto_pub -h 172.19.1.2 -t streetlight -m "yellow" --repeat 500 --repeat-delay 40s
+    tty: true
     volumes: 
       - broker-data:/mosquitto/data
       - broker-logs:/mosquitto/log
@@ -19,10 +25,16 @@ services:
     networks: 
         cluster_net: 
             ipv4_address: "172.19.1.3"
+         
+    depends_on: 
+      - broker
           
 
   clientB:
     image: eclipse-mosquitto:1.6.9
+    entrypoint: /bin/ash -c
+    command:
+     - mosquitto_sub -t streetlight -h 172.19.1.2 -v
     volumes: 
       - broker-data:/mosquitto/data
       - broker-logs:/mosquitto/log
@@ -30,6 +42,11 @@ services:
     networks: 
       cluster_net: 
         ipv4_address: "172.19.1.4"
+    
+    depends_on: 
+      - broker
+ 
+  
 
   # attacker:
   #   image: kalilinux/kali-rolling:latest
@@ -41,8 +58,6 @@ services:
   #     cluster_net: 
   #       ipv4_address: "172.19.1.15"
 
-    ports: 
-      - "4222:22"
 
 networks: 
     cluster_net:
